# rs-onebot

./: Cargo.toml
note/: recv_msg.json
src/: bot.rs  main.rs  modules.rs
