[package]
name = "rs-onebot"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
serde_json = "1.0"
serde = { version = "1.0.203", features = ["derive"]}
async-tungstenite = { version = "0.26.1", features = ["async-std-runtime"] }
async-std = "1.12.0"
futures = "0.3.30"
base64 = "0.22.1"
reqwest = "0.12.5"